WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40731
REGRESSION (
r61234
): http/tests/security/xssAuditor/embed-tag-null-char.html and http/tests/security/xssAuditor/object-embed-tag-null-char.html fail on Windows
https://bugs.webkit.org/show_bug.cgi?id=40731
Summary
REGRESSION (r61234): http/tests/security/xssAuditor/embed-tag-null-char.html ...
Adam Roben (:aroben)
Reported
2010-06-16 13:35:22 PDT
REGRESSION (
r61234
): http/tests/security/xssAuditor/embed-tag-null-char.html and http/tests/security/xssAuditor/object-embed-tag-null-char.html fail on Windows
Attachments
Patch
(4.05 KB, patch)
2010-06-16 13:44 PDT
,
Adam Roben (:aroben)
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-06-16 13:44:50 PDT
Created
attachment 58924
[details]
Patch
Alexey Proskuryakov
Comment 2
2010-06-16 13:47:13 PDT
Comment on
attachment 58924
[details]
Patch Is this the last %S we have, or will we need a separate patch for each? :) r=me
Adam Roben (:aroben)
Comment 3
2010-06-16 13:48:13 PDT
(In reply to
comment #2
)
> (From update of
attachment 58924
[details]
) > Is this the last %S we have, or will we need a separate patch for each? :)
We have many others, and I considered changing them all, but the Windows machine I have access to at the moment can't run all the tests. Once I have access to a better machine I'll look into changing them all. Thanks for the review!
Adam Roben (:aroben)
Comment 4
2010-06-16 13:58:59 PDT
Committed
r61279
: <
http://trac.webkit.org/changeset/61279
>
Adam Roben (:aroben)
Comment 5
2010-06-16 13:59:30 PDT
I'll reopen this bug if the tests aren't fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug