Convert console messages to UTF-8 before printing them

Speculative fix for <http://webkit.org/b/40731> REGRESSION (r61234):
http/tests/security/xssAuditor/embed-tag-null-char.html and
http/tests/security/xssAuditor/object-embed-tag-null-char.html fail on
Windows. (I can't test the fix because Apache is crashing on my
computer.)

Reviewed by Alexey Proskuryakov.

* DumpRenderTree/win/DumpRenderTree.cpp:
(toUTF8): Extracted the code into an overload that takes a wide string
and a length, then added an overload that takes a wstring.

* DumpRenderTree/win/DumpRenderTreeWin.h: Declare the new toUTF8
overload.

* DumpRenderTree/win/UIDelegate.cpp:
(UIDelegate::webViewAddMessageToConsole): Use toUTF8 to convert to
UTF-8 instead of letting printf convert to the current code page.

Canonical link: https://commits.webkit.org/52289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61279 268f45cc-cd09-0410-ab3c-d52691b4dbfc